--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="refresh" content="0; url=/en/" />
-    <title>Fernando Falci</title>
+    <title>Gustavo Beligante</title>
   </head>
 
   <body>Loading...</body>
