--- a/base/index.html
+++ b/base/index.html
@@ -77,9 +77,8 @@
           </header>
           <div class="social-icons">
             <a href="@@social.linkedin" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
-            <a href="https://plus.google.com/u/0/+FernandoFalci/posts" class="btn btn-round btn-clear btn-google"><i class="fa fa-google-plus"></i></a>
-            <a href="http://stackoverflow.com/users/1247387/falci" class="btn btn-round btn-clear btn-stack-overflow"><i class="fa fa-stack-overflow"></i></a>
-            <a href="https://github.com/Falci" class="btn btn-round btn-clear btn-git"><i class="fa fa-github"></i></a>
+            <a href="fb.com/beligante" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://github.com/beligante" class="btn btn-round btn-clear btn-git"><i class="fa fa-github"></i></a>
           </div>
           <a href="#page-contact" class="btn btn-default hire-me">@@hireMe</a>
       </div>
@@ -138,9 +137,9 @@
           </span>
         </div>
         <div class="col-md-2">
-          <span class="chart" data-percent="75">
+          <span class="chart" data-percent="60">
             <span class="percent"></span>
-            <h3>CSS</h3>
+            <h3>React</h3>
           </span>
         </div>
         <div class="col-md-2">
@@ -152,7 +151,25 @@
         <div class="col-md-2">
           <span class="chart" data-percent="70">
             <span class="percent"></span>
-            <h3>NodeJS</h3>
+            <h3>Spring</h3>
+          </span>
+        </div>
+        <div class="col-md-2">
+          <span class="chart" data-percent="75">
+            <span class="percent"></span>
+            <h3>REST</h3>
+          </span>
+        </div>
+        <div class="col-md-2">
+          <span class="chart" data-percent="50">
+            <span class="percent"></span>
+            <h3>Docker</h3>
+          </span>
+        </div>
+        <div class="col-md-2">
+          <span class="chart" data-percent="75">
+            <span class="percent"></span>
+            <h3>E-Commerce</h3>
           </span>
         </div>
       </div>
@@ -165,17 +182,11 @@
           <li>NodeJS</li>
           <li>CSS/Sass/Less</li>
           <li>Java</li>
-          <li>PHP</li>
-          <li>Jersey</li>
-          <li>Guava/Guice</li>
-          <li>Netflix OSS</li>
           <li>GIT</li>
           <li>Jira/Stash</li>
           <li>Jenkins</li>
           <li>Postgres</li>
           <li>MySQL</li>
-          <li>Oracle</li>
-          <li>MongoDB</li>
           <li>Cassandra</li>
           <li>Redis</li>
           <li>Sockets</li>
@@ -190,6 +201,12 @@
           <li>Karma</li>
           <li>Chai</li>
           <li>Mocha</li>
+          <li>E-commerce</li>
+          <li>Konakart</li>
+          <li>Docker</li>
+          <li>Vagrant</li>
+          <li>Puppet</li>
+          <li>E-commerce</li>
         </ul>
       </div>
     </div>
@@ -212,22 +229,13 @@
         <p class="section-subtitle">@@education.sub</p>
       </header>
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-md-offset-4">
           <article class="education">
             <header>
-              <h3>@@education.cesumar.title</h3>
-              <p>@@education.cesumar.sub - <strong>@@education.cesumar.progress</strong></p>
+              <h3>@@education.uem.title</h3>
+              <p>@@education.uem.sub - <strong>@@education.uem.progress</strong></p>
             </header>
-            <p>@@education.cesumar.text</p>
-          </article>
-        </div>
-        <div class="col-md-6">
-          <article class="education">
-            <header>
-              <h3>@@education.unipar.title</h3>
-              <p>@@education.unipar.sub - <strong>@@education.unipar.progress</strong></p>
-            </header>
-            <p>@@education.unipar.text</p>
+            <p>@@education.uem.text</p>
           </article>
         </div>
       </div>
@@ -244,31 +252,13 @@
         <p class="section-subtitle">@@experience.sub</p>
       </header>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 col-md-offset-4">
           <article class="experience">
             <header>
               <h3>@@experience.matera.title</h3>
               <p>@@experience.matera.sub</p>
             </header>
             <p>@@experience.matera.text</p>
-          </article>
-        </div>
-        <div class="col-md-4">
-          <article class="experience">
-            <header>
-              <h3><i>@@experience.confidential.title</i></h3>
-              <p>@@experience.confidential.sub</p>
-            </header>
-            <p>@@experience.confidential.text</p>
-          </article>
-        </div>
-        <div class="col-md-4">
-          <article class="experience">
-            <header>
-              <h3>@@experience.elotech.title</h3>
-              <p>@@experience.elotech.sub</p>
-            </header>
-            <p>@@experience.elotech.text</p>
           </article>
         </div>
       </div>
@@ -354,19 +344,6 @@
   <script src="i18n.js"></script>
   <script src="../js/contact_me.js"></script>
   <script src="../js/main.js"></script>
-
-  <script>
-    var lang = 'en';
-
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-2568035-30', 'auto');
-    ga('send', 'pageview');
-
-  </script>
 </body>
 
 </html>
