--- a/es/index.html
+++ b/es/index.html
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Alternar navegação</span>
+          <span class="sr-only">toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -50,9 +50,9 @@
           <li><a href="#page-welcome">Home</a></li>
           <li><a href="#page-profile">Perfil</a></li>
           <li><a href="#page-skills">Habilidades</a></li>
-          <li><a href="#page-education">Graduação</a></li>
+          <li><a href="#page-education">Educación</a></li>
           <li><a href="#page-experience">Experiência</a></li>
-          <li><a href="#page-contact">Contato</a></li>
+          <li><a href="#page-contact">Contacto</a></li>
           <li><a href="/en/" title="English version"><img src="../img/flags/en.png" width="17" /></a></li>
           <li><a href="/br/" title="Versão em português"><img src="../img/flags/br.png" width="17" /></a></li>
         </ul>
@@ -73,11 +73,11 @@
         <div class="row">
           <header class="centered">
             <h1>Gustavo Beligante</h1>
-            <p>desenvolvedor</p>
+            <p>Desarrolador Fullstack</p>
           </header>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/gustavobeligante" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
-            <a href="fb.com/beligante" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://fb.com/beligante" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
             <a href="https://github.com/beligante" class="btn btn-round btn-clear btn-git"><i class="fa fa-github"></i></a>
           </div>
           <a href="#page-contact" class="btn btn-default hire-me">Contrate-me</a>
@@ -90,7 +90,7 @@
   <section id="page-profile" class="page-profile">
     <div class="container">
       <header class="section-header">
-        <h2 class="section-title">Perfil Pessoal</h2>
+        <h2 class="section-title">PERFIL PERSONAL</h2>
         <div class="spacer"></div>
         <!-- <p class="section-subtitle"></p> -->
       </header>
@@ -102,13 +102,13 @@
         </div>
         <div class="col-md-9 animated">
           
-            <p>Olá, meu nome é Luis Gustavo Beligante, sou desenvolvedor fullstack e trabalho nessa área desde minha graduação, há quatro anos.</p>
-            <p>Comecei como estagiário na <a href="http://www.matera.com" target="_blank">MATERA Systems</a>, trabalhando no desenvolvimento de e-commerces.</p>
-            <p>Durante meu periodo de estagio, aprendi muito sobre este tipo de software e suas mais diversas regras de negócio, além disto, todos os e-commerces que desenvolvemos aguentaram o trafego de clientes (que chegou a ser de 1Mi de requisições simultâneas em um deles) sem prejudicar a experiência do usuário. Foram utilizadas diversas tecnologias para o desenvolvimento de tais e-commerces, como por exemplo: Spring, Mysql, Docker, Vagrant, REST, JSP, HTML5 e entre outras</p>
-            <p>Alguns pré-requisitos das aplicações de e-Commerce, obrigaram-me a voltar a minha atenção para questões arquiteturais que permitissem que as aplicações desenvolvidas fossem escalaveis, elásticas e resilientes. Durante meu periodo como desenvolvedor de tais aplicações, dediquei-me a estudar estas questões, o resultado do esforço foi visto, como já citado, na capacidade de resposta demonstrada pelas aplicações quando grandes volumes de trafego agiam sobre as mesmas. </p>
-            <p>Após algum período trabalhando com os e-commerces, fui alocado para trabalhar em outro projeto o qual tive que me capacitar em React / Redux para desenvolver uma aplicação PWA (Progressive Web App).</p>
-            <p>Atualmente, trabalho AngularJS 2 e TypeScript no desenvolvimento single page application de um sistema de gestão.</p>
-            <p>Bem, esse é apenas um resumo das minhas experiências profissionais. Fique a vontate para entrar em contato e tirar qualquer dúvida. :)</p>
+            <p>Hola, mi nombre es Luis Gustavo Beligante am fullstack desarrollador y el trabajo en esta área desde mi graduación, hace cuatro años.</p>
+            <p>Empecé como pasante en Sistemas de Matera, que trabaja en el desarrollo de e-Commerces.</p>
+            <p>Durante mi periodo de prácticas, he aprendido mucho acerca de este tipo de software y sus diversas reglas de negocio, además, todos los e-Commerces que desarrollamos resistieron el tráfico de clientes (que llegó a ser 1km de solicitudes simultáneas en una de ellas) sin afectar a la experiencia del usuario. Ellos utilizan diferentes tecnologías para el desarrollo de este tipo de correos comercios, tales como: primavera, Mysql, estibador, vagabundo, REST, JSP, HTML 5 y entre otras.</p>
+            <p>Algunos requisitos previos de aplicaciones de comercio electrónico, me obligaron a volver la atención a las cuestiones arquitectónicas que permitieron a las aplicaciones desarrolladas para ser escalable, elástica y resistente. Durante mi periodo como desarrollador de estas aplicaciones, me dediqué a estudiar estas cuestiones, el resultado del esfuerzo se vio como ya se ha mencionado, la capacidad de respuesta demostrada por las aplicaciones cuando grandes volúmenes de tráfico que actuaron en ellos.</p>
+            <p>Después de un período de trabajo con e-Commerces, me asignaron a trabajar en otro proyecto, que tuvo que permitirá reaccionar / Redux para desarrollar una aplicación PWA (Web App progresivo).</p>
+            <p>Actualmente, AngularJS 2 y mecanografiado de trabajar en el desarrollo de la aplicación de una sola página de un sistema de gestión.</p>
+            <p>Bueno, esto es sólo un resumen de mi experiencia profesional. Vontate llegar a ponerse en contacto y tener alguna pregunta. :)</p>
         </div>
       </div>
     </div>
@@ -122,7 +122,7 @@
       <header class="section-header">
         <h2 class="section-title"><span>Habilidades</span></h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Palavras-chave</p>
+        <p class="section-subtitle">Palabras clave</p>
       </header>
       <div class="row regular">
         <div class="col-md-2">
@@ -231,18 +231,18 @@
   <section id="page-education" class="page-education">
     <div class="container">
       <header class="section-header">
-        <h2 class="section-title"><span>Graduação</span></h2>
+        <h2 class="section-title"><span>Educación</span></h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Os pilares do meu conhecimento</p>
+        <p class="section-subtitle">La base de mi conocimiento</p>
       </header>
       <div class="row">
         <div class="col-md-6 col-md-offset-4">
           <article class="education">
             <header>
-              <h3>Universidade Estadual de Maringá - Maringá</h3>
-              <p>Bacharelado em Informática - <strong>2016</strong></p>
+              <h3>Universidad Estatal de Maringá - Maringá</h3>
+              <p>Licenciado en Ciencias de la Computación - <strong>2016</strong></p>
             </header>
-            <p>Graças ao curso, fui capaz de obter uma base sólida dos conceitos computacionais com os quais trabalh, o que em inúmeras vezes me ajudou durante a carreira profissional a encontrar a melhor solução a ser adotada. Considero a decisão de adentrar ao ensino superior umas das melhores decisões que já tomei.</p>
+            <p>Gracias al curso que fue capaz de conseguir una base sólida de conceptos computacionales que trabajan, que en muchas ocasiones me han ayudado durante la carrera profesional para encontrar la mejor solución a adoptar. Considero que la decisión de entrar en una educación superior de las mejores decisiones que he tomado.</p>
           </article>
         </div>
       </div>
@@ -256,16 +256,16 @@
       <header class="section-header">
         <h2 class="section-title"><span>Experiência</span></h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Algumas empresas importantes da minha carreira profissional</p>
+        <p class="section-subtitle">Algunas empresas importantes de mi carrera profesional</p>
       </header>
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
           <article class="experience">
             <header>
               <h3>MATERA Systems</h3>
-              <p>Desenvolvedor / Maringá, PR / 2013 - Atual</p>
+              <p>Desarrollador Fullstack / Maringá, PR / 2013 - Atual</p>
             </header>
-            <p>Atuo como desenvolvedor em um projeto outsourcing para uma grande empresa do segmento de e-Commerce e BigData. Palavras chave: API Rest, micro-serviços, Java, Spring, <i>outsourcing</i>.</p>
+            <p>Yo trabajo como desarrollador en un proyecto de outsourcing para una compañía grande en el segmento de comercio electrónico y bigdata. Palabras clave: API Rest, micro-servicios, Java, Spring, <i>outsourcing</i>.</p>
           </article>
         </div>
       </div>
@@ -285,46 +285,46 @@
   <section id="page-contact" class="page-contact">
     <div class="container">
       <header class="section-header">
-        <h2 class="section-title"><span>Contato</span></h2>
+        <h2 class="section-title"><span>Contacto</span></h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Quer conversar?</p>
+        <p class="section-subtitle">Hablemos</p>
       </header>
       <div class="row">
         <div class="col-sm-5 contact-info animated">
-          <h3>Informações de contato</h3>
+          <h3>Información del contacto</h3>
           <p><i class="fa fa-map-marker"></i> Maringá, PR, Brasil</p>
           <p><i class="fa fa-phone"></i> / <i class="fa fa-whatsapp"></i> (44) 9 9892-2935</p>
           <p><i class="fa fa-envelope-o"></i> <a href="mailto:gustavobeligante@gmail.com">gustavobeligante@gmail.com</a></p>
         </div>
 
         <div class="col-sm-7 animated">
-          <h3>Contato</h3>
+          <h3>Contacto</h3>
           <!-- Configure the contact form by adding your email address on mail/contact_me.php line 17 -->
           <form class="form-horizontal" id="contactForm" novalidate>
             <div class="control-group">
-              <label class="control-label" for="name">Nome</label>
+              <label class="control-label" for="name">Nombre</label>
               <div class="controls">
-                <input type="text" name="name" id="name" placeholder="Nome" class="form-control input-lg"  required data-validation-required-message="Quem é você?">
+                <input type="text" name="name" id="name" placeholder="Nombre" class="form-control input-lg"  required data-validation-required-message="¿Quiénes son ustedes?">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="control-group">
               <label class="control-label" for="email">Email</label>
               <div class="controls">
-                <input type="email" name="email" id="email" placeholder="Seu email" class="form-control input-lg"  required data-validation-required-message="Me passa seu email para eu poder responder">
+                <input type="email" name="email" id="email" placeholder="Seu email" class="form-control input-lg"  required data-validation-required-message="Dame tu email para que pueda responder">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="control-group">
               <label class="control-label" for="message">Message</label>
               <div class="controls">
-                <textarea name="message" id="message" rows="8" class="form-control input-lg" required data-validation-required-message="Ahh.. escreve algo..."></textarea>
+                <textarea name="message" id="message" rows="8" class="form-control input-lg" required data-validation-required-message="Hmm .. escribe algo ..."></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="form-actions">
             <div id="success"></div>
-              <button type="submit" class="btn btn-default btn-lg btn-block">Enviar mensagem</button>
+              <button type="submit" class="btn btn-default btn-lg btn-block">Enviar mensaje</button>
             </div>
           </form>
             <!-- End contact-form -->
