--- a/base/index.html
+++ b/base/index.html
@@ -77,7 +77,7 @@
           </header>
           <div class="social-icons">
             <a href="@@social.linkedin" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
-            <a href="fb.com/beligante" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://fb.com/beligante" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
             <a href="https://github.com/beligante" class="btn btn-round btn-clear btn-git"><i class="fa fa-github"></i></a>
           </div>
           <a href="#page-contact" class="btn btn-default hire-me">@@hireMe</a>
