--- a/en/index.html
+++ b/en/index.html
@@ -39,7 +39,7 @@
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Alternar navegação</span>
+          <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
@@ -48,11 +48,11 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav" id="main-menu">
           <li><a href="#page-welcome">Home</a></li>
-          <li><a href="#page-profile">Perfil</a></li>
-          <li><a href="#page-skills">Habilidades</a></li>
-          <li><a href="#page-education">Graduação</a></li>
-          <li><a href="#page-experience">Experiência</a></li>
-          <li><a href="#page-contact">Contato</a></li>
+          <li><a href="#page-profile">Profile</a></li>
+          <li><a href="#page-skills">Skills</a></li>
+          <li><a href="#page-education">Education</a></li>
+          <li><a href="#page-experience">Experience</a></li>
+          <li><a href="#page-contact">Contact</a></li>
           <li><a href="/br/" title="Versão em portugês"><img src="../img/flags/br.png" width="17" /></a></li>
           <li><a href="/es/" title="Version en español"><img src="../img/flags/es.png" width="17" /></a></li>
         </ul>
@@ -73,11 +73,11 @@
         <div class="row">
           <header class="centered">
             <h1>Gustavo Beligante</h1>
-            <p>desenvolvedor</p>
+            <p>Fullstack Developer</p>
           </header>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/gustavobeligante" class="btn btn-round btn-clear btn-linkedin"><i class="fa fa-linkedin-square"></i></a>
-            <a href="fb.com/beligante" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
+            <a href="https://fb.com/beligante" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
             <a href="https://github.com/beligante" class="btn btn-round btn-clear btn-git"><i class="fa fa-github"></i></a>
           </div>
           <a href="#page-contact" class="btn btn-default hire-me">Contrate-me</a>
@@ -90,7 +90,7 @@
   <section id="page-profile" class="page-profile">
     <div class="container">
       <header class="section-header">
-        <h2 class="section-title">Perfil Pessoal</h2>
+        <h2 class="section-title">Personal Profile</h2>
         <div class="spacer"></div>
         <!-- <p class="section-subtitle"></p> -->
       </header>
@@ -102,13 +102,13 @@
         </div>
         <div class="col-md-9 animated">
           
-            <p>Olá, meu nome é Luis Gustavo Beligante, sou desenvolvedor fullstack e trabalho nessa área desde minha graduação, há quatro anos.</p>
-            <p>Comecei como estagiário na <a href="http://www.matera.com" target="_blank">MATERA Systems</a>, trabalhando no desenvolvimento de e-commerces.</p>
-            <p>Durante meu periodo de estagio, aprendi muito sobre este tipo de software e suas mais diversas regras de negócio, além disto, todos os e-commerces que desenvolvemos aguentaram o trafego de clientes (que chegou a ser de 1Mi de requisições simultâneas em um deles) sem prejudicar a experiência do usuário. Foram utilizadas diversas tecnologias para o desenvolvimento de tais e-commerces, como por exemplo: Spring, Mysql, Docker, Vagrant, REST, JSP, HTML5 e entre outras</p>
-            <p>Alguns pré-requisitos das aplicações de e-Commerce, obrigaram-me a voltar a minha atenção para questões arquiteturais que permitissem que as aplicações desenvolvidas fossem escalaveis, elásticas e resilientes. Durante meu periodo como desenvolvedor de tais aplicações, dediquei-me a estudar estas questões, o resultado do esforço foi visto, como já citado, na capacidade de resposta demonstrada pelas aplicações quando grandes volumes de trafego agiam sobre as mesmas. </p>
-            <p>Após algum período trabalhando com os e-commerces, fui alocado para trabalhar em outro projeto o qual tive que me capacitar em React / Redux para desenvolver uma aplicação PWA (Progressive Web App).</p>
-            <p>Atualmente, trabalho AngularJS 2 e TypeScript no desenvolvimento single page application de um sistema de gestão.</p>
-            <p>Bem, esse é apenas um resumo das minhas experiências profissionais. Fique a vontate para entrar em contato e tirar qualquer dúvida. :)</p>
+            <p>Hi, my name is Luis Gustavo Beligante, I'm a fullstack developer and work in this area since the beginning of my degree, four years ago.</p>
+            <p>I started as an intern at <a href="http://www.matera.com" target="_blank">MATERA Systems</a>, working on the development of e-commerces.</p>
+            <p>During my internship period, I learned a lot about this type of software and its many different business rules, in addition, all the e-commerces that we developed supported the traffic of clients (which came to be a million of simultaneous requests in one of them) Without harming the user experience. Several technologies were used for the development of such e-commerce, for example: Spring, Mysql, Docker, Vagrant, REST, JSP, HTML5 and others</p>
+            <p>Some prerequisites for e-Commerce applications forced me to turn my attention to architectural issues that allowed developed applications to be scalable, elastic, and resilient. During my time as a developer of such applications, I devoted myself to studying these questions, the result of the effort was seen, as already mentioned, in the responsiveness demonstrated by the applications when large volumes of traffic acted on them.</p>
+            <p>After some time working with the e-commerces, I was allocated to work on another project which I had to train in React / Redux to develop a PWA (Progressive Web App) application.</p>
+            <p>I currently work AngularJS 2 and TypeScript on the single page application development of a management system.</p>
+            <p>Well, this is just a resume of my professional experiences. Feel free to contact me.</p>
         </div>
       </div>
     </div>
@@ -120,9 +120,9 @@
     <div class="container">
 
       <header class="section-header">
-        <h2 class="section-title"><span>Habilidades</span></h2>
+        <h2 class="section-title"><span>Skills</span></h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Palavras-chave</p>
+        <p class="section-subtitle">A.K.A.: Keywords</p>
       </header>
       <div class="row regular">
         <div class="col-md-2">
@@ -231,18 +231,18 @@
   <section id="page-education" class="page-education">
     <div class="container">
       <header class="section-header">
-        <h2 class="section-title"><span>Graduação</span></h2>
+        <h2 class="section-title"><span>Education</span></h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Os pilares do meu conhecimento</p>
+        <p class="section-subtitle">The base of my knowledge</p>
       </header>
       <div class="row">
         <div class="col-md-6 col-md-offset-4">
           <article class="education">
             <header>
-              <h3>Universidade Estadual de Maringá - Maringá</h3>
-              <p>Bacharelado em Informática - <strong>2016</strong></p>
+              <h3>State University of Maringa - Maringa</h3>
+              <p>Bachelor of Computer Science - <strong>2016</strong></p>
             </header>
-            <p>Graças ao curso, fui capaz de obter uma base sólida dos conceitos computacionais com os quais trabalh, o que em inúmeras vezes me ajudou durante a carreira profissional a encontrar a melhor solução a ser adotada. Considero a decisão de adentrar ao ensino superior umas das melhores decisões que já tomei.</p>
+            <p>Thanks to the course, I was able to get a solid foundation of the computational concepts with which I work, which has helped me during my professional career to find the best solution to be adopted. I consider the decision to enter higher education one of the best decisions I have ever made.</p>
           </article>
         </div>
       </div>
@@ -254,18 +254,18 @@
   <section id="page-experience" class="page-experience">
     <div class="container">
       <header class="section-header">
-        <h2 class="section-title"><span>Experiência</span></h2>
+        <h2 class="section-title"><span>Experience</span></h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Algumas empresas importantes da minha carreira profissional</p>
+        <p class="section-subtitle">Some important companies of my professional career</p>
       </header>
       <div class="row">
         <div class="col-md-4 col-md-offset-4">
           <article class="experience">
             <header>
               <h3>MATERA Systems</h3>
-              <p>Desenvolvedor / Maringá, PR / 2013 - Atual</p>
+              <p>Fullstack Developer / Maringá, PR / 2013 - Atual</p>
             </header>
-            <p>Atuo como desenvolvedor em um projeto outsourcing para uma grande empresa do segmento de e-Commerce e BigData. Palavras chave: API Rest, micro-serviços, Java, Spring, <i>outsourcing</i>.</p>
+            <p>I act as a developer in an outsourcing project for a large company in the e-Commerce segment and BigData. Keywords: API Rest, micro-services, Java, Spring, outsourcing.</p>
           </article>
         </div>
       </div>
@@ -285,46 +285,46 @@
   <section id="page-contact" class="page-contact">
     <div class="container">
       <header class="section-header">
-        <h2 class="section-title"><span>Contato</span></h2>
+        <h2 class="section-title"><span>Contact</span></h2>
         <div class="spacer"></div>
-        <p class="section-subtitle">Quer conversar?</p>
+        <p class="section-subtitle">Let's talk</p>
       </header>
       <div class="row">
         <div class="col-sm-5 contact-info animated">
-          <h3>Informações de contato</h3>
+          <h3>Contact information</h3>
           <p><i class="fa fa-map-marker"></i> Maringá, PR, Brasil</p>
           <p><i class="fa fa-phone"></i> / <i class="fa fa-whatsapp"></i> (44) 9 9892-2935</p>
           <p><i class="fa fa-envelope-o"></i> <a href="mailto:gustavobeligante@gmail.com">gustavobeligante@gmail.com</a></p>
         </div>
 
         <div class="col-sm-7 animated">
-          <h3>Contato</h3>
+          <h3>Contact</h3>
           <!-- Configure the contact form by adding your email address on mail/contact_me.php line 17 -->
           <form class="form-horizontal" id="contactForm" novalidate>
             <div class="control-group">
-              <label class="control-label" for="name">Nome</label>
+              <label class="control-label" for="name">Name</label>
               <div class="controls">
-                <input type="text" name="name" id="name" placeholder="Nome" class="form-control input-lg"  required data-validation-required-message="Quem é você?">
+                <input type="text" name="name" id="name" placeholder="Name" class="form-control input-lg"  required data-validation-required-message="Who are you?">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="control-group">
               <label class="control-label" for="email">Email</label>
               <div class="controls">
-                <input type="email" name="email" id="email" placeholder="Seu email" class="form-control input-lg"  required data-validation-required-message="Me passa seu email para eu poder responder">
+                <input type="email" name="email" id="email" placeholder="your email" class="form-control input-lg"  required data-validation-required-message="Hand me your email so I can answer">
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="control-group">
               <label class="control-label" for="message">Message</label>
               <div class="controls">
-                <textarea name="message" id="message" rows="8" class="form-control input-lg" required data-validation-required-message="Ahh.. escreve algo..."></textarea>
+                <textarea name="message" id="message" rows="8" class="form-control input-lg" required data-validation-required-message="Hmm.. type something..."></textarea>
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="form-actions">
             <div id="success"></div>
-              <button type="submit" class="btn btn-default btn-lg btn-block">Enviar mensagem</button>
+              <button type="submit" class="btn btn-default btn-lg btn-block">Send Message</button>
             </div>
           </form>
             <!-- End contact-form -->
