Corrigindo a label de 'Contrate-me' nas linguas eng e es

--- a/en/index.html
+++ b/en/index.html
@@ -80,7 +80,7 @@
             <a href="https://fb.com/beligante" class="btn btn-round btn-clear btn-facebook"><i class="fa fa-facebook"></i></a>
             <a href="https://github.com/beligante" class="btn btn-round btn-clear btn-git"><i class="fa fa-github"></i></a>
           </div>
-          <a href="#page-contact" class="btn btn-default hire-me">Contrate-me</a>
+          <a href="#page-contact" class="btn btn-default hire-me">Hire me</a>
       </div>
     </div>
   </section>
