Adding new companies at the CV

--- a/base/index.html
+++ b/base/index.html
@@ -131,15 +131,21 @@
           </span>
         </div>
         <div class="col-md-2">
-          <span class="chart" data-percent="75">
+          <span class="chart" data-percent="85">
             <span class="percent"></span>
-            <h3>AngularJS</h3>
+            <h3>React</h3>
           </span>
         </div>
         <div class="col-md-2">
-          <span class="chart" data-percent="60">
+          <span class="chart" data-percent="90">
             <span class="percent"></span>
-            <h3>React</h3>
+            <h3>Redux</h3>
+          </span>
+        </div>
+        <div class="col-md-2">
+          <span class="chart" data-percent="80">
+            <span class="percent"></span>
+            <h3>Redux-Saga</h3>
           </span>
         </div>
         <div class="col-md-2">
@@ -161,12 +167,6 @@
           </span>
         </div>
         <div class="col-md-2">
-          <span class="chart" data-percent="50">
-            <span class="percent"></span>
-            <h3>Docker</h3>
-          </span>
-        </div>
-        <div class="col-md-2">
           <span class="chart" data-percent="75">
             <span class="percent"></span>
             <h3>E-Commerce</h3>
@@ -177,7 +177,9 @@
         <ul>
           <li>Javascript</li>
           <li>HTML</li>
-          <li>AngularJS</li>
+          <li>ReactJS</li>
+          <li>Redux</li>
+          <li>Redux-Saga</li>
           <li>Leadership</li>
           <li>NodeJS</li>
           <li>CSS/Sass/Less</li>
@@ -252,13 +254,31 @@
         <p class="section-subtitle">@@experience.sub</p>
       </header>
       <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="col-md-4">
           <article class="experience">
             <header>
               <h3>@@experience.matera.title</h3>
               <p>@@experience.matera.sub</p>
             </header>
             <p>@@experience.matera.text</p>
+          </article>
+        </div>
+        <div class="col-md-4">
+          <article class="experience">
+            <header>
+              <h3>@@experience.ac.title</h3>
+              <p>@@experience.ac.sub</p>
+            </header>
+            <p>@@experience.ac.text</p>
+          </article>
+        </div>
+        <div class="col-md-4">
+          <article class="experience">
+            <header>
+              <h3>@@experience.op.title</h3>
+              <p>@@experience.op.sub</p>
+            </header>
+            <p>@@experience.op.text</p>
           </article>
         </div>
       </div>
