--- a/es/index.html
+++ b/es/index.html
@@ -101,14 +101,8 @@
             </div>
         </div>
         <div class="col-md-9 animated">
-          
-            <p>Hola, mi nombre es Luis Gustavo Beligante am fullstack desarrollador y el trabajo en esta área desde mi graduación, hace cuatro años.</p>
-            <p>Empecé como pasante en Sistemas de Matera, que trabaja en el desarrollo de e-Commerces.</p>
-            <p>Durante mi periodo de prácticas, he aprendido mucho acerca de este tipo de software y sus diversas reglas de negocio, además, todos los e-Commerces que desarrollamos resistieron el tráfico de clientes (que llegó a ser 1km de solicitudes simultáneas en una de ellas) sin afectar a la experiencia del usuario. Ellos utilizan diferentes tecnologías para el desarrollo de este tipo de correos comercios, tales como: primavera, Mysql, estibador, vagabundo, REST, JSP, HTML 5 y entre otras.</p>
-            <p>Algunos requisitos previos de aplicaciones de comercio electrónico, me obligaron a volver la atención a las cuestiones arquitectónicas que permitieron a las aplicaciones desarrolladas para ser escalable, elástica y resistente. Durante mi periodo como desarrollador de estas aplicaciones, me dediqué a estudiar estas cuestiones, el resultado del esfuerzo se vio como ya se ha mencionado, la capacidad de respuesta demostrada por las aplicaciones cuando grandes volúmenes de tráfico que actuaron en ellos.</p>
-            <p>Después de un período de trabajo con e-Commerces, me asignaron a trabajar en otro proyecto, que tuvo que permitirá reaccionar / Redux para desarrollar una aplicación PWA (Web App progresivo).</p>
-            <p>Actualmente, AngularJS 2 y mecanografiado de trabajar en el desarrollo de la aplicación de una sola página de un sistema de gestión.</p>
-            <p>Bueno, esto es sólo un resumen de mi experiencia profesional. Vontate llegar a ponerse en contacto y tener alguna pregunta. :)</p>
+          <p>Olá, meu nome é Luis Gustavo Beligante, sou desenvolvedor frontend e trabalho nessa área desde o início da minha graduação, há quase seis anos. Atualmente trabalho desenvolvendo aplicações web com React, porém no meu background tecnico eu já trabalhei com Java e NodeJS</p>
+          <p>Além das linguagens citadas, também já trabalhei com aplicações monoliticas, distribuidas em micro serviços, single page e server side rendered applications. No que tange gerenciamento de projetos já trabalhei com: Scrum, Kanban e XP</p>
         </div>
       </div>
     </div>
@@ -138,15 +132,21 @@
           </span>
         </div>
         <div class="col-md-2">
-          <span class="chart" data-percent="75">
+          <span class="chart" data-percent="85">
             <span class="percent"></span>
-            <h3>AngularJS</h3>
+            <h3>React</h3>
           </span>
         </div>
         <div class="col-md-2">
-          <span class="chart" data-percent="60">
+          <span class="chart" data-percent="90">
             <span class="percent"></span>
-            <h3>React</h3>
+            <h3>Redux</h3>
+          </span>
+        </div>
+        <div class="col-md-2">
+          <span class="chart" data-percent="80">
+            <span class="percent"></span>
+            <h3>Redux-Saga</h3>
           </span>
         </div>
         <div class="col-md-2">
@@ -168,12 +168,6 @@
           </span>
         </div>
         <div class="col-md-2">
-          <span class="chart" data-percent="50">
-            <span class="percent"></span>
-            <h3>Docker</h3>
-          </span>
-        </div>
-        <div class="col-md-2">
           <span class="chart" data-percent="75">
             <span class="percent"></span>
             <h3>E-Commerce</h3>
@@ -184,7 +178,9 @@
         <ul>
           <li>Javascript</li>
           <li>HTML</li>
-          <li>AngularJS</li>
+          <li>ReactJS</li>
+          <li>Redux</li>
+          <li>Redux-Saga</li>
           <li>Leadership</li>
           <li>NodeJS</li>
           <li>CSS/Sass/Less</li>
@@ -259,13 +255,31 @@
         <p class="section-subtitle">Algunas empresas importantes de mi carrera profesional</p>
       </header>
       <div class="row">
-        <div class="col-md-4 col-md-offset-4">
+        <div class="col-md-4">
           <article class="experience">
             <header>
               <h3>MATERA Systems</h3>
-              <p>Desarrollador Fullstack / Maringá, PR / 2013 - Atual</p>
+              <p>Software Engineering - Tech Lead - Team Lead / Maringá, PR / 2013 - 2018 (5 anos)</p>
             </header>
-            <p>Yo trabajo como desarrollador en un proyecto de outsourcing para una compañía grande en el segmento de comercio electrónico y bigdata. Palabras clave: API Rest, micro-servicios, Java, Spring, <i>outsourcing</i>.</p>
+            <p>Passei cerca de três anos desenvolvendo plataformas de e-commerce atuando como fullstack. Em outro momento passei a atuar em um projeto cujo requisito base era uma aplicação SSR com NodeJS e React. Palavras chave: React, Redux, Redux-Saga, NodeJS, SSR, REST, micro-serviços, Java, Spring</p>
+          </article>
+        </div>
+        <div class="col-md-4">
+          <article class="experience">
+            <header>
+              <h3>Avenue Code</h3>
+              <p>Software Engineering - Tech Lead - Team Lead / Belo Horizonte, MG / 2018 - 2018 (6 meses)</p>
+            </header>
+            <p>Durante este periodo, desenvolvemos uma aplicação responsável por consumir dados de um stream de dados e se manter interativa enquanto o stream ainda estava ativo. Palavras Chave: React, Redux, Redux-Saga, NodeJS, SPA, REST, micro-serviços, Java, Spring, Netflix OSS</p>
+          </article>
+        </div>
+        <div class="col-md-4">
+          <article class="experience">
+            <header>
+              <h3>OpenProvider</h3>
+              <p>Senior Software Engineering - UI Tech Lead / Maringá, PR / 2018 - Atual (REMOTO)</p>
+            </header>
+            <p>Resposavel arquitetar e desenvolver uma serie de pequenas aplicações Web responsáveis pelo controle de diversar rotinas envolvendo Firewall, DNS e dominios: React, Redux, Redux-Saga, NodeJS, SPA, REST, micro-serviços</p>
           </article>
         </div>
       </div>
