--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
   <head>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=/en/" />
+    <meta http-equiv="refresh" content="0; url=/br/" />
     <title>Gustavo Beligante</title>
   </head>
 
