--- a/es/index.html
+++ b/es/index.html
@@ -101,8 +101,9 @@
             </div>
         </div>
         <div class="col-md-9 animated">
-          <p>Olá, meu nome é Luis Gustavo Beligante, sou desenvolvedor frontend e trabalho nessa área desde o início da minha graduação, há quase seis anos. Atualmente trabalho desenvolvendo aplicações web com React, porém no meu background tecnico eu já trabalhei com Java e NodeJS</p>
-          <p>Além das linguagens citadas, também já trabalhei com aplicações monoliticas, distribuidas em micro serviços, single page e server side rendered applications. No que tange gerenciamento de projetos já trabalhei com: Scrum, Kanban e XP</p>
+          <p>Olá, meu nome é Luis Gustavo Beligante. Sou desenvolvedor frontend e trabalho nessa área há quase seis anos. Atualmente, trabalho desenvolvendo aplicações web com React, porém já atuei como desenvolvedor fullstack trabalhando com as linguagens Java e NodeJS.</p>
+          <p>Sou muito familiar ao modelo de negócio de e-commerces, sendo que boa parte da minha experiência profissional é construída em cima desse tipo de sistema. Também tenho experiência com os mais diversos tipos de arquitetura de aplicações, como por exemplo: aplicações monolíticas, distribuídas em micro serviços, aplicações single page e server side rendered.</p>
+          <p>No que tange gerenciamento de projetos já atuei como líder de equipe, líder técnico e como arquiteto, além disso, trabalho desde o começo da minha carreira com equipes parcialmente ou totalmente remotas. Com relação a metodologias ágeis, tenho experiência com: Scrum, Kanban e XP</p>
         </div>
       </div>
     </div>
