--- a/en/index.html
+++ b/en/index.html
@@ -271,7 +271,7 @@
               <h3>Avenue Code</h3>
               <p>Software Engineering - Tech Lead - Team Lead / Belo Horizonte, MG / 2018 - 2018 (6 meses)</p>
             </header>
-            <p>Durante este periodo, desenvolvemos uma aplicação responsável por consumir dados de um stream de dados e se manter interativa enquanto o stream ainda estava ativo. Palavras Chave: React, Redux, Redux-Saga, NodeJS, SPA, REST, micro-serviços, Java, Spring, Netflix OSS</p>
+            <p>Durante este período, desenvolvemos uma aplicação responsável por consumir dados de um stream de dados e se manter interativa enquanto o stream ainda estava ativo. Palavras Chave: React, Redux, Redux-Saga, NodeJS, SPA, REST, micro-serviços, Java, Spring, Netflix OSS</p>
           </article>
         </div>
         <div class="col-md-4">
@@ -280,7 +280,7 @@
               <h3>OpenProvider</h3>
               <p>Senior Software Engineering - UI Tech Lead / Maringá, PR / 2018 - Atual (REMOTO)</p>
             </header>
-            <p>Resposavel arquitetar e desenvolver uma serie de pequenas aplicações Web responsáveis pelo controle de diversar rotinas envolvendo Firewall, DNS e dominios: React, Redux, Redux-Saga, NodeJS, SPA, REST, micro-serviços</p>
+            <p>Responsável arquitetar e desenvolver uma série de pequenas aplicações Web responsáveis pelo controle de diversas rotinas envolvendo Firewall, DNS e domínios: React, Redux, Redux-Saga, NodeJS, SPA, REST, micro-serviços</p>
           </article>
         </div>
       </div>
