Fixing portuguese errors on school experience

--- a/br/index.html
+++ b/br/index.html
@@ -102,8 +102,8 @@
         </div>
         <div class="col-md-9 animated">
           <p>Olá, meu nome é Luis Gustavo Beligante. Sou desenvolvedor frontend e trabalho nessa área há quase seis anos. Atualmente, trabalho desenvolvendo aplicações web com React, porém já atuei como desenvolvedor fullstack trabalhando com as linguagens Java e NodeJS.</p>
-          <p>Sou muito familiar ao modelo de negócio de e-commerces, sendo que boa parte da minha experiência profissional é construída em cima desse tipo de sistema. Também tenho experiência com os mais diversos tipos de arquitetura de aplicações, como por exemplo: aplicações monolíticas, distribuídas em micro serviços, aplicações single page e server side rendered.</p>
-          <p>No que tange gerenciamento de projetos já atuei como líder de equipe, líder técnico e como arquiteto, além disso, trabalho desde o começo da minha carreira com equipes parcialmente ou totalmente remotas. Com relação a metodologias ágeis, tenho experiência com: Scrum, Kanban e XP</p>
+          <p>Sou muito familiar ao modelo de negócio de e-commerces, sendo que boa parte da minha experiência profissional é construída em cima desse tipo de sistema. Também tenho experiência com os mais diversos tipos de arquiteturas de aplicações, como por exemplo: aplicações monolíticas, distribuídas em micro serviços, aplicações single page e server side rendered.</p>
+          <p>No que tange gerenciamento de projetos já atuei como líder de equipe, líder técnico e como arquiteto, além disso, trabalho desde o começo da minha carreira com equipes parcialmente ou totalmente remotas. Com relação a metodologias ágeis, tenho experiência com: Scrum, Kanban e XP.</p>
         </div>
       </div>
     </div>
@@ -239,7 +239,7 @@
               <h3>Universidade Estadual de Maringá - Maringá</h3>
               <p>Bacharelado em Informática - <strong>2016</strong></p>
             </header>
-            <p>Graças ao curso, fui capaz de obter uma base sólida dos conceitos computacionais com os quais trabalho, o que em inúmeras vezes me ajudou durante a carreira profissional a encontrar a melhor solução a ser adotada. Considero a decisão de adentrar ao ensino superior umas das melhores decisões que já tomei.</p>
+            <p>Graças ao curso, fui capaz de obter uma base sólida dos conceitos computacionais com os quais trabalho, o que em inúmeras vezes me ajudou durante a carreira profissional a encontrar a melhor solução a ser adotada. Considero a decisão de adentrar ao ensino superior uma das melhores decisões que já tomei.</p>
           </article>
         </div>
       </div>
@@ -280,7 +280,7 @@
               <h3>OpenProvider</h3>
               <p>Senior Software Engineering - UI Tech Lead / Maringá, PR / 2018 - Atual (REMOTO)</p>
             </header>
-            <p>Responsável arquitetar e desenvolver uma série de pequenas aplicações Web responsáveis pelo controle de diversas rotinas envolvendo Firewall, DNS e domínios: React, Redux, Redux-Saga, NodeJS, SPA, REST, micro-serviços</p>
+            <p>Responsável por arquitetar e desenvolver uma série de pequenas aplicações Web responsáveis pelo controle de diversas rotinas envolvendo Firewall, DNS e domínios: React, Redux, Redux-Saga, NodeJS, SPA, REST, micro-serviços</p>
           </article>
         </div>
       </div>
